update addon permission

--- a/blender_manifest.toml
+++ b/blender_manifest.toml
@@ -23,8 +23,8 @@ license = [
   "SPDX:GPL-3.0-or-later",
 ]
 
-# [permissions]
-# files = "Reading and writing json preset files in a user-defined location"
+[permissions]
+files = "Checking/Reloading external files size used in current blend file"
 # network = "Need to sync motion-capture data to server"
 # files = "Import/export FBX from/to disk"
 # clipboard = "Copy and paste bone transforms"
